--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^9.0.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@videosdk.live/expo-config-plugin": "^0.0.1",
+    "@videosdk.live/react-native-foreground-service": "^0.0.3",
+    "@videosdk.live/react-native-incallmanager": "^0.1.3",
+    "@videosdk.live/react-native-sdk": "^0.1.11",
+    "@videosdk.live/react-native-webrtc": "^0.0.11",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
